# sphere-tracing

./: .gitignore  CMakeLists.txt  LICENCE  README.md
include/: Color.hpp  Ray.hpp  Renderer.hpp  SDF.hpp  Vector.hpp
src/: Image.cpp  Renderer.cpp  SDF.cpp  Vector.cpp  main.cpp
tests/: VectorTest.cpp
